--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <head></head>
 <body>
 <main>
+<p><a href="/sketch_all">sketch_all</a></p>
 
 {% for index in range(index_count) %}
 <p><a href="/sketch{{index}}">sketch{{index}}</a></p>
