--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,9 @@
 <body>
 <main>
 <p><a href="/sketch_all">sketch_all</a></p>
+<p><a href="/sketch_gd">sketch_gd</a></p>
+<p><a href="/sketch_pix">sketch_pix</a></p>
 
-{% for index in range(index_count) %}
-<p><a href="/sketch{{index}}">sketch{{index}}</a></p>
-
-{% endfor %}
-
-{% for index in range(index_count) %}
-<p><a href="/sketch_no{{index}}">sketch_NoBG{{index}}</a></p>
-
-{% endfor %}
-
-{% for index in range(index_count) %}
-<p><a href="/wave{{index}}">wave{{index}}</a></p>
-
-{% endfor %}
 </main>
 
 </body>
