--- a/templates/sketch_all.html
+++ b/templates/sketch_all.html
@@ -261,6 +261,7 @@ noiseSeed(seed_slider.value());
 function draw() {
   if(gameStarted){
 
+    console.log(draw_count);
 
    
   if(draw_count === 0){
